[tool.poetry]
name = "hdf_tools_soundscape"
version = "0.1.0"
description = "A project for handling HDF tools in soundscape analysis."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.21"
pandas = "^1.3"
scipy = "^1.7"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"