[project]
name = "hdf_tools_soundscape"
version = "0.1.0"
description = "HEAD acoustics HDF tools for soundscape research"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "numpy",
    "matplotlib",
    "scipy",
    "ipykernel",   # 用于 Jupyter kernel
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.uv]
# 可选：把虚拟环境放在项目本地
venv = ".venv"
