[project]
name = "hdf_tools_soundscape"
version = "0.1.0"
description = "HEAD acoustics HDF tools for soundscape research"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "numpy",
    "matplotlib",
    "scipy",
    "ipykernel",
    "mosqito" 
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.uv]
venv = ".venv"
